feat: filter excluded calculators from analytics endpoints via wildcard patterns
Inject CostAnalyticsProperties into CostAnalyticsService and apply isExcluded()
post-fetch filtering on calculator summaries, recent runs, anomalies, and CSV export.
Supports exact, prefix, suffix, and contains wildcard patterns; case-insensitive.

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>